# PERFECCITY-SKU-master

./: README.md  SCHEMA.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: config.py  db.py  main.py  models.py  queries.py
cypher/: validate-graph.cypher  wall-configurator-graph-v5.cypher
cypher/engine/: 00-cart-schema.cypher  01-validate-cart.cypher  02-bom-generator.cypher  03-evaluate-cart.cypher  99-sample-carts.cypher  README.md
queries/: utility-queries.cypher
scripts/: seed.py
