[project]
name = "perfeccity-configurator-api"
version = "1.0.0"
description = "FastAPI service for the Perfeccity Wall Panel Configurator — wraps Neo4j rule engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "neo4j>=5.20,<6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/queries.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
